# BmTechP1

./: .flaskenv  .gitignore  Dockerfile  app.db  boot.sh  config.py  docker-compose.yml  microblog.py  pyproject.toml  requirements.txt  test.py
app/: __init__.py  app_email.py  cli.py  email.py  errors.py  forms.py  models.py  routes.py  search.py  tasks.py  translate.py
app/api/: auth.py  errors.py  users.py
app/auth/: email.py  forms.py  routes.py
app/errors/: handlers.py
app/main/: forms.py  routes.py
app/templates/: _post.html  base.html  bootstrap_wtf.html  edit_profile.html  index.html  login.html  messages.html  user.html
app/templates/auth/: reset_password.html
app/templates/email/: reset_password.html
app/templates/errors/: 404.html  500.html
app/translations/es/LC_MESSAGES/: messages.po
app/translations/uk/LC_MESSAGES/: messages.po
migrations/versions/: 2d0a3190ff70_users_table.py  489bde7385f1_posts_table.py  84e9d8702467_new_fields_in_user_model.py  bb5cb423cb10_language.py  f1940f785331_.py
