[project]
name = "bmtechp1"
version = "0.1.0"
description = ""
authors = [
    {name = "Daryna",email = "kisildarina09@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-wtf (>=1.3.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "flask-login (>=0.6.3,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
